[package]

name = "abort_on_panic"
version = "0.0.8"
authors = ["Eric Kidd <git@randomhacks.net>", "Benjamin Herr <ben@0x539.de>"]

description = "Intercept panic! from unsafe locations and abort the process"
license = "Unlicense"
readme = "README.md"

repository = "https://github.com/emk/abort_on_panic-rs"
documentation = "http://www.rust-ci.org/emk/abort_on_panic-rs/doc/abort_on_panic/"

[features]
# Allow access to unstable features when being built with a nightly compiler,
# to keep travis-cargo happy and enable access to benchmarks if we want them.
unstable = []
