[package]

name = "abort_on_panic"
version = "1.0.0"
authors = ["Eric Kidd <git@randomhacks.net>", "Benjamin Herr <ben@0x539.de>"]

description = "Intercept panic! from unsafe locations and abort the process"
license = "CC0"
readme = "README.md"

homepage = "https://github.com/emk/abort_on_panic-rs"
repository = "https://github.com/emk/abort_on_panic-rs"
documentation = "http://emk.github.io/abort_on_panic-rs/abort_on_panic/index.html"

[features]
# Allow access to unstable features when being built with a nightly compiler,
# to keep travis-cargo happy and enable access to benchmarks if we want them.
unstable = []
